fixed the alignment on the <em> tag

--- a/Layout 1/style.css
+++ b/Layout 1/style.css
@@ -69,3 +69,7 @@ h2 {
     font-size: 20px;
     
 }
+
+footer {
+    text-align: center;
+}
